@@ -7,6 +7,7 @@ check Tcl scripts.</DL>
 <DL><DD>void <B>eval</B>(String <I>str</I>) throws TclException</DL>
 <DL><DD>void <B>eval</B>(String <I>str</I>, int <I>flags</I>) throws TclException</DL>
 <DL><DD>void <B>eval</B>(TclObject <I>tobj</I>, int <I>flags</I>) throws TclException</DL>
+<DL><DD>void <B>recordAndEval</B>(String <I>str</I>, int <I>flags</I>) throws TclException</DL>
 <DL><DD>void <B>evalFile</B>(String <I>fileName</I>) throws TclException</DL>
 <DL><DD>static boolean <B>commandComplete</B>(String <I>cmdName</I>) throws TclException</DL>
 <DD><A HREF="Eval.htm#M4" NAME="L26">OTHER METHODS</A>
@@ -16,12 +17,13 @@ check Tcl scripts.</DL>
 <DD><A HREF="Eval.htm#M6" NAME="L28">DESCRIPTION</A>
 <DL>
 <DD><A HREF="Eval.htm#M7" NAME="L29"><B>eval</B></A>
-<DD><A HREF="Eval.htm#M8" NAME="L30"><B>evalFile</B></A>
-<DD><A HREF="Eval.htm#M9" NAME="L31"><B>commandComplete</B></A>
+<DD><A HREF="Eval.htm#M8" NAME="L31"><B>recordAndEval</B></A>
+<DD><A HREF="Eval.htm#M9" NAME="L30"><B>evalFile</B></A>
+<DD><A HREF="Eval.htm#M10" NAME="L32"><B>commandComplete</B></A>
 </DL>
-<DD><A HREF="Eval.htm#M10" NAME="L32">EQUIVALENT C FUNCTIONS</A>
-<DD><A HREF="Eval.htm#M11" NAME="L33">SEE ALSO</A>
-<DD><A HREF="Eval.htm#M12" NAME="L34">KEYWORDS</A>
+<DD><A HREF="Eval.htm#M11" NAME="L33">EQUIVALENT C FUNCTIONS</A>
+<DD><A HREF="Eval.htm#M12" NAME="L34">SEE ALSO</A>
+<DD><A HREF="Eval.htm#M13" NAME="L35">KEYWORDS</A>
 </DL><HR>
 <H3><A NAME="M2">CLASS</A></H3>
 tcl.lang.Interp -- This manual entry contains Interp methods that execute or
@@ -30,6 +32,7 @@ check Tcl scripts.
 <P>void <B>eval</B>(String <I>str</I>) throws TclException
 <P>void <B>eval</B>(String <I>str</I>, int <I>flags</I>) throws TclException
 <P>void <B>eval</B>(TclObject <I>tobj</I>, int <I>flags</I>) throws TclException
+<P>void <B>recordAndEval</B>(String <I>str</I>, int <I>flags</I>) throws TclException
 <P>void <B>evalFile</B>(String <I>fileName</I>) throws TclException
 <P>static boolean <B>commandComplete</B>(String <I>cmdName</I>) throws TclException
 <H3><A NAME="M4">OTHER METHODS</A></H3>
@@ -77,11 +80,16 @@ Tcl procedures that are active).  Otherwise, the script is evaluated in
 the current stack level.  A TclException is thrown if an error occurs
 in evaluating the <I>str</I> or <I>tobj</I> (e.g. the script contains bad
 Tcl syntax or accesses an undefined variable).
-<P><DT><A NAME="M8"><B>evalFile</B></A><DD>
+<P><DT><A NAME="M8"><B>recordAndEval</B></A><DD>
+The <B>recordAndEval</B> method adds the script stored in <I>str</I>
+to the current list of recorded events and then executes the command by
+calling <B>eval</B>.
+
+<P><DT><A NAME="M9"><B>evalFile</B></A><DD>
 The <B>evalFile</B> method reads the file given by <I>fileName</I> and
 evaluates its contents as a Tcl script.  It behaves the same as
 <B>eval</B>.
-<P><DT><A NAME="M9"><B>commandComplete</B></A><DD>
+<P><DT><A NAME="M10"><B>commandComplete</B></A><DD>
 The <B>commandComplete</B> method takes a Tcl command <I>str</I>
 as argument and determines whether it contains one or more
 complete commands (i.e. there are no unclosed quotes, braces,
@@ -90,11 +98,11 @@ If the command string is complete then it returns true; otherwise it
 returns false.
 
 <P></DL>
-<H3><A NAME="M10">EQUIVALENT C FUNCTIONS</A></H3>
-<A href="../cFunctions.html">Tcl_Eval</A>, <A href="../cFunctions.html">Tcl_GlobalEval</A>, <A href="../cFunctions.html">Tcl_EvalObj</A>, <A href="../cFunctions.html">Tcl_EvalFile</A>, <A href="../cFunctions.html">Tcl_CommandComplete</A>
-<H3><A NAME="M11">SEE ALSO</A></H3>
+<H3><A NAME="M11">EQUIVALENT C FUNCTIONS</A></H3>
+<A href="../cFunctions.html">Tcl_Eval</A>, <A href="../cFunctions.html">Tcl_GlobalEval</A>, <A href="../cFunctions.html">Tcl_EvalObj</A>, <A href="../cFunctions.html">Tcl_EvalFile</A>, <A href="../cFunctions.html">Tcl_RecordAndEval</A>, <A href="../cFunctions.html">Tcl_CommandComplete</A>
+<H3><A NAME="M12">SEE ALSO</A></H3>
 <B><A HREF="../TclJavaLib/Interp.htm">Interp</A></B>, <B><A HREF="../TclJavaLib/setVar.htm">setVar</A></B>, <B><A HREF="../TclJavaLib/setResult.htm">setResult</A></B>, <B><A HREF="../TclJavaLib/backgdErr.htm">addErrorInfo</A></B>, <B><A HREF="../TclJavaLib/dispose.htm">dispose</A></B>, <B><A HREF="../TclJavaLib/TclException.htm">TclException</A></B>, <B><A HREF="../TclJavaLib/runtimeError.htm">TclRuntimeError</A></B>, <B><A HREF="../TclJavaLib/TclEvent.htm">TclEvent</A></B>
-<H3><A NAME="M12">KEYWORDS</A></H3>
+<H3><A NAME="M13">KEYWORDS</A></H3>
 <A href="../Keywords/C.htm#complete command">complete command</A>, <A href="../Keywords/E.htm#execute">execute</A>, <A href="../Keywords/F.htm#file">file</A>, <A href="../Keywords/G.htm#global">global</A>, <A href="../Keywords/I.htm#interpreter">interpreter</A>, <A href="../Keywords/O.htm#object">object</A>, <A href="../Keywords/P.htm#partial
 command">partial
 command</A>, <A href="../Keywords/R.htm#result">result</A>, <A href="../Keywords/S.htm#script">script</A>
