@@ -28,7 +28,7 @@
 <A HREF="TclJavaLib/Eval.htm">Tcl_EvalObj</A>                  <A HREF="TclJavaLib/TclList.htm">Tcl_NewListObj</A>               <A HREF="TclJavaLib/traceVar.htm">Tcl_UntraceVar</A>               
 <A HREF="TclJavaLib/EventDeleter.htm">Tcl_EventDeleteProc</A>          <A HREF="TclJavaLib/TclObject.htm">Tcl_NewObj</A>                   <A HREF="TclJavaLib/traceVar.htm">Tcl_UntraceVar2</A>              
 <A HREF="TclJavaLib/TclEvent.htm">Tcl_EventProc</A>                <A HREF="TclJavaLib/TclString.htm">Tcl_NewStringObj</A>             <A HREF="TclJavaLib/runtimeError.htm">panic</A>                        
-<A HREF="TclJavaLib/setAssocData.htm">Tcl_GetAssocData</A>             <A HREF="TclJavaLib/InternalRep.htm">Tcl_ObjType.dupIntRepProc</A>    
+<A HREF="TclJavaLib/setAssocData.htm">Tcl_GetAssocData</A>             <A HREF="TclJavaLib/InternalRep.htm">Tcl_ObjType.dupIntRepProc</A>    <A HREF="TclJavaLib/Eval.htm">recordAndEval</A>
 </PRE>
 
 <HR>
